допилил напильником
